upgpkg: ncurses 6.3-3 Add --without-xterm-kbs=del as without it backspace may be treated as delete: https://bugs.archlinux.org/task/74379 Remove unneeded quotes and curly braces.

--- a/ncurses/PKGBUILD
+++ b/ncurses/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=ncurses
 pkgver=6.3
-pkgrel=2
+pkgrel=3
 pkgdesc='System V Release 4.0 curses emulation library'
 arch=(x86_64)
 url='https://invisible-island.net/ncurses/ncurses.html'
@@ -17,9 +17,9 @@ provides=(libncurses++w.so libformw.so libmenuw.so libpanelw.so libncursesw.so)
 replaces=(alacritty-terminfo)
 options=(debug)
 source=(
-  "https://invisible-mirror.net/archives/${pkgname}/${pkgname}-${pkgver}.tar.gz"{,.asc}
-  "${pkgname}-6.3-libs.patch"
-  "${pkgname}-6.3-pkgconfig.patch"
+  https://invisible-mirror.net/archives/$pkgname/$pkgname-$pkgver.tar.gz{,.asc}
+  $pkgname-6.3-libs.patch
+  $pkgname-6.3-pkgconfig.patch
 )
 sha512sums=('5373f228cba6b7869210384a607a2d7faecfcbfef6dbfcd7c513f4e84fbd8bcad53ac7db2e7e84b95582248c1039dcfc7c4db205a618f7da22a166db482f0105'
             'SKIP'
@@ -32,12 +32,11 @@ b2sums=('b2c174ac48d587b4d3aa054f04e4ec8bffd8a657a4aff5f090104965c741901e600712c
 validpgpkeys=('19882D92DDA4C400C22C0D56CC2AF4472167BE03')  # Thomas Dickey <dickey@invisible-island.net>
 
 prepare() {
-  cd $pkgname-$pkgver
   # do not link against test libraries
-  patch -Np1 -i ../"${pkgname}-6.3-libs.patch"
+  patch -Np1 -d $pkgname-$pkgver -i ../$pkgname-6.3-libs.patch
   # do not leak build-time LDFLAGS into the pkgconfig files:
   # https://bugs.archlinux.org/task/68523
-  patch -Np1 -i ../"${pkgname}-6.3-pkgconfig.patch"
+  patch -Np1 -d $pkgname-$pkgver -i ../$pkgname-6.3-pkgconfig.patch
   # NOTE: can't run autoreconf because the autotools setup is custom and ancient
 }
 
@@ -54,6 +53,7 @@ build() {
     --with-pkg-config-libdir=/usr/lib/pkgconfig \
     --with-shared \
     --with-versioned-syms \
+    --with-xterm-kbs=del \
     --without-ada
   make
 }
