--- a/clamav/PKGBUILD
+++ b/clamav/PKGBUILD
@@ -5,7 +5,7 @@
 # Contributor: Gaetan Bisson <bisson@archlinux.org>
 
 pkgname=clamav
-pkgver=0.104.2
+pkgver=0.105.0
 pkgrel=1
 pkgdesc='Anti-virus toolkit for Unix'
 url='https://www.clamav.net/'
@@ -13,7 +13,7 @@ license=('GPL')
 arch=('x86_64')
 depends=('bzip2' 'libltdl' 'libxml2' 'curl' 'systemd-libs' 'pcre2' 'json-c' 'libmspack'
          'ncurses' libsystemd.so libncursesw.so libcurl.so libjson-c.so libbz2.so)
-makedepends=('libmilter' 'systemd' 'cmake' 'ninja' 'python')
+makedepends=('libmilter' 'systemd' 'cmake' 'ninja' 'python' 'cargo')
 checkdepends=('check')
 backup=('etc/clamav/clamd.conf'
         'etc/clamav/freshclam.conf'
@@ -24,7 +24,7 @@ source=(https://www.clamav.net/downloads/production/${pkgname}-${pkgver}.tar.gz{
         clamav.logrotate
         clamav.tmpfiles
         clamav.sysusers)
-sha512sums=('8c89a05dec6650677125177434cc49ec2298701525508cdda52358e8f98086d80892287f6267f8b7fda0aef2ca361616cb584c3059f3b066bfde65f7f1ba2df5'
+sha512sums=('84e871942e67d0a96c4a95eee7e36e1094865a69fdfd590ad8acf4e4a772e1b60bd1f21f73f9c5ad9043a6624c4fece5bb66a976b2592e9b7babfa1e5a1ba453'
             'SKIP'
             '9cb168c1c16bb43c99900d7ef34456e3f3b593d4d1943c875a0306bc86fd3872cb78e9e1413dcba93579e01b96d466c9eea1975e24190193663b7986c4525d48'
             'c5443634399bd87fe0d0192518538ffdb7296a8437b5b0160a0fbd58696b01285de3237e3feb552c0095c49e576832dec2e2b2107eef2be42424ed7edd13cd19'
