upgpkg: postgresql-old-upgrade 13.7-1
upstream release

--- a/postgresql-old-upgrade/PKGBUILD
+++ b/postgresql-old-upgrade/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Dan McGee <dan@archlinux.org>
 
 pkgname=postgresql-old-upgrade
-pkgver=13.6
+pkgver=13.7
 _majorver=${pkgver%.*}
 pkgrel=1
 pkgdesc='PostgreSQL build for migrating between major versions with pg_upgrade'
@@ -17,11 +17,11 @@ optdepends=('python: for PL/Python 3 support'
             'tcl: for PL/Tcl support')
 options=('debug')
 source=(https://ftp.postgresql.org/pub/source/v${pkgver}/postgresql-${pkgver}.tar.bz2)
-b2sums=('f5ea95fd9ffc8846e0aaf5bac03b02afa71e62e796bbe40f68af727a2f3c74eddd98cb68427bcc13b87b6fa00a8e2a7b18dd7749318f0a4a32cfdbf9b0e0a873')
+md5sums=('dba6e30a292af33996e84a5b0a3739a4')
+sha256sums=('1b905bf4f3d83614a393b3c51fd345910fd261e4f5124a68d9a1fdd3a2a46399')
+b2sums=('2d8a505f6de4eb31cae415529eeac750a60abafcf45e7fde29043597b385a8150fac55df659f8c2ad200822e8063d388ed606dff9108d4407f9e26b893fa62f4')
 
 # Upstream provides md5 and sha256
-md5sums=('06161451ca1b9fc888ce6e18ca93f7d1')
-sha256sums=('bafc7fa3d9d4da8fe71b84c63ba8bdfe8092935c30c0aa85c24b2c08508f67fc')
 
 build() {
   cd postgresql-${pkgver}
@@ -44,7 +44,7 @@ build() {
     --without-libxslt
     --disable-nls
     --enable-thread-safety
-    --enable-rpath
+    --disable-rpath
   )
 
   # Fix static libs
