upgpkg: pycharm-community-edition 2022.1.1-1
upstream release

--- a/pycharm-community-edition/PKGBUILD
+++ b/pycharm-community-edition/PKGBUILD
@@ -1,11 +1,12 @@
-# Maintainer: Maxime Gauduin <alucryd@archlinux.org>
 # Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
 # Maintainer: Orhun Parmaksız <orhun@archlinux.org>
+# Maintainer: Leonidas Spyropoulos <artafinde@archlinux.org>
+# Contributor: Maxime Gauduin <alucryd@archlinux.org>
 # Contributor: David Keogh <davekeogh@archlinux.us>
 
 pkgname=pycharm-community-edition
-pkgver=2022.1
-_build=221.5080.212
+pkgver=2022.1.1
+_build=221.5591.52
 pkgrel=1
 pkgdesc='Python IDE for Professional Developers'
 arch=(x86_64)
