--- a/tor/PKGBUILD
+++ b/tor/PKGBUILD
@@ -6,11 +6,11 @@
 # Contributor: Sid Karunaratne
 
 pkgname=tor
-pkgver=0.4.6.10
+pkgver=0.4.7.7
 pkgrel=1
 pkgdesc='Anonymizing overlay network.'
 arch=('x86_64')
-url='https://www.torproject.org/'
+url='https://www.torproject.org/download/tor/'
 license=('BSD')
 depends=('openssl' 'libevent' 'bash' 'libseccomp' 'zstd' 'libcap' 'systemd-libs'
          'libsystemd.so' 'libzstd.so' 'libseccomp.so' 'libcap.so')
@@ -22,7 +22,7 @@ source=("https://dist.torproject.org/${pkgname}-${pkgver}.tar.gz"
         'tor.sysusers'
         'tor.tmpfiles'
         'tor.service')
-b2sums=('4bdf8ab8ac992866ffc18711de0ad9e19b496398dfdace4d3902273822666dcfda3acd825ee22251cd8d671ff563702c6f24fe8670719a2c75d144cfe9219f68'
+b2sums=('18acfbe017b2ad456184f6031881149717f6fecad0d3e6daf90241a5a8ef296c32a36ace266d38b703f34b66d71e282c803f03f2059502c6ff6f4fdfb6641a97'
         '3359e138d823a77df2a42ce3fe8c6ecb4004e9ec191863db7857aceea7c136c78f09518b1a199dfd3215f5d61f1c060f4a0e2141c5bdb6b847af60fb6e9a81a7'
         '9053da53926f2120ac57b6c1442238f5bbd89bf9270347c4e00b721b39939bebc6adfcf814a9d7289dfd14d085d91c193529305336db93190da5b7f586a031df'
         '5d55d9a7e42b6ce78b8ab985bab37afe8f0bacddb5abd895c4a490adb8f98b9422f90b40066fef05ecf37b7b21e80aadc615c4b7f6e12b05581304113a1b1f1d'
