--- a/valgrind/PKGBUILD
+++ b/valgrind/PKGBUILD
@@ -2,14 +2,24 @@
 # Contributor: Dan McGee <dan@archlinux.org>
 # Contributor: Allan McRae <allan@archlinux.org>
 
+# README
+# this package requires glibc-debug to run the check() function
+# as -debug packages are not available in [core], it has to be applied manually
+# whenever the tests shall run
+#
+# For a fresh build:
+# $repo-x86_64-build -- -I ../../glibc/trunk/glibc-debug*.pkg.tar.zst
+# $repo-x86_64-build
+# ${repo}pkg
+
 pkgname=valgrind
 pkgver=3.19.0
-pkgrel=1
+pkgrel=3
 pkgdesc='Tool to help find memory-management problems in programs'
 arch=('x86_64')
 license=('GPL')
 url='http://valgrind.org/'
-depends=('glibc' 'perl')
+depends=('glibc' 'perl' 'debuginfod')
 makedepends=('gdb' 'lib32-glibc' 'lib32-gcc-libs' 'docbook-xml'
              'docbook-xsl' 'docbook-sgml')
 checkdepends=('procps-ng')
@@ -57,6 +67,9 @@ build() {
 }
 
 check() {
+  # only run if glibc-debug is supplied manually
+  if ! pacman -Q glibc-debug; then echo -e "\033[1;31mcheck() not run, supply glibc-debug if unintended!\033[0m"; return 0; fi
+
   cd valgrind-${pkgver}
 
   # Make sure a basic binary runs. There should be no errors.
