--- a/jadx/PKGBUILD
+++ b/jadx/PKGBUILD
@@ -2,17 +2,17 @@
 # Contributor: Nicolas Hureau <archlinux@kalenz.net>
 
 pkgname=jadx
-pkgver=1.3.5
+pkgver=1.4.0
 pkgrel=1
 pkgdesc='Command line and GUI tools to produce Java source code from Android Dex and APK files'
 url='https://github.com/skylot/jadx'
 arch=('any')
 license=('Apache')
-depends=('java-runtime=11' 'bash')
-makedepends=('java-environment=11' 'gradle')
+depends=('java-runtime>=11' 'bash')
+makedepends=('java-environment>=11' 'gradle')
 source=(https://github.com/skylot/${pkgname}/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz)
-sha512sums=('6b5e11c60122eefa1cf95dd45ba68622725acea7288c517ec32ed6c5fab40af238f5b7966264b9209402b5f9ee5f011873a1eea856764115418ff5d9b1025cc3')
-b2sums=('af1629083c2345c2531f7f6a2f35f510e7f8cdb8c7422881feb0bde2d7acf405a0e3562cd48cb049dadbf6037b9da469168250514ca3c5295d78968af6107cc6')
+sha512sums=('f18726589ae37832b6e852a30d21cb867c55b57444ef98704a4117a04364cafb7e2dad873eb7d192d6b0d4a6029b64801563e64aedf85c9cdaad9a8ab4a3448b')
+b2sums=('3de50fc2a0ace1440ad1bbbf46219b70d98bd61ef6f7125588916c0aced03970a9a29d885fead5cd5753685c9c364f46a49c648e06b393cb5567802f0c550a5d')
 
 build() {
   cd ${pkgname}-${pkgver}
