upgpkg: mediaelch 2.8.16-3: Drop unused qtscript dependency

--- a/mediaelch/PKGBUILD
+++ b/mediaelch/PKGBUILD
@@ -3,13 +3,13 @@
 
 pkgname=mediaelch
 pkgver=2.8.16
-pkgrel=2
+pkgrel=3
 pkgdesc='Media Manager for handling Movies, TV Shows and Concerts/Music Videos for Kodi'
 url='https://www.mediaelch.de/mediaelch/'
 arch=('x86_64')
 license=('LGPL3')
 depends=('glibc' 'gcc-libs' 'libmediainfo' 'qt5-declarative' 'qt5-multimedia'
-         'qt5-script' 'qt5-svg' 'quazip')
+         'qt5-svg' 'quazip-qt5')
 makedepends=('cmake' 'ninja' 'qt5-tools')
 source=(https://github.com/Komet/MediaElch/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz)
 sha256sums=('bbb195fde2c1c5019326bc275013b772da92e1325f3ff47b266474e230545611')
