upgpkg: smplayer 22.2.0-2: Drop unused qtscript dependency

--- a/smplayer/PKGBUILD
+++ b/smplayer/PKGBUILD
@@ -7,12 +7,12 @@
 
 pkgname=smplayer
 pkgver=22.2.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Media player with built-in codecs that can play virtually all video and audio formats'
 url='https://www.smplayer.info/'
 arch=('x86_64')
 license=('GPL')
-depends=('glibc' 'qt5-script' 'qt5-base' 'mpv' 'libx11' 'zlib' 'gcc-libs' 'hicolor-icon-theme')
+depends=('glibc' 'qt5-base' 'mpv' 'libx11' 'zlib' 'gcc-libs' 'hicolor-icon-theme')
 makedepends=('qt5-tools')
 optdepends=('smplayer-themes: icon themes collection'
             'smplayer-skins: skin themes collection'
