upgpkg: openmpi 4.1.4-1: Upgrade to 4.1.4.

--- a/openmpi/PKGBUILD
+++ b/openmpi/PKGBUILD
@@ -4,13 +4,12 @@
 # Contributor: Stéphane Gaudreault <stephane@archlinux.org>
 
 pkgname=openmpi
-pkgver=4.1.3
+pkgver=4.1.4
 pkgrel=1
 pkgdesc='High performance message passing library (MPI)'
 arch=(x86_64)
 url='https://www.open-mpi.org'
 license=('custom:OpenMPI')
-# TODO: package and depend on https://github.com/openpmix/prrte
 depends=(gcc-libs glibc hwloc libevent libnl openpmix zlib)
 makedepends=(cuda gcc-fortran inetutils valgrind)
 optdepends=(
@@ -35,12 +34,13 @@ provides=(
 )
 options=(debug)
 source=(https://www.open-mpi.org/software/ompi/v${pkgver%.*}/downloads/$pkgname-$pkgver.tar.bz2)
-sha256sums=('3d81d04c54efb55d3871a465ffb098d8d72c1f48ff1cbaf2580eb058567c0a3b')
-b2sums=('5148fe5fb68f7be32d6a76fa780b13e74f98621a001f860e92c0cba85b405f193f9afeeb9518cff8bbf57098cc813701fb3edda7061f557da7fa9cdcbc63c722')
+sha256sums=('92912e175fd1234368c8730c03f4996fe5942e7479bb1d10059405e7f2b3930d')
+b2sums=('b020e3530ae5dde7b144e7c33b1a3f26f622526a4b48a97a0956fc6f49bbf9dfd5be9ebeeaf3bdc5168a307507408ba5dd8e2a537148821e1d476678177dc5d6')
 
 build() {
   cd $pkgname-$pkgver
 
+  # TODO: depend on prrte with openmpi >= 5
   ./configure \
     --prefix=/usr \
     --enable-builtin-atomics \
