--- a/gajim/PKGBUILD
+++ b/gajim/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Eric Bélanger <eric@archlinux.org>
 
 pkgname=gajim
-_pkgver=1.4.3
+_pkgver=1.4.4
 #_fixupver=2
 pkgver=${_pkgver}
 #pkgver=${_pkgver}.r${_fixupver}
@@ -11,7 +11,7 @@ pkgdesc='Full featured and easy to use XMPP (Jabber) client'
 url='https://gajim.org/'
 arch=('any')
 license=('GPL3')
-depends=('gtk3' 'python-cairo' 'python-gobject' 'python-keyring' 'python-nbxmpp'
+depends=('gtk3' 'gtksourceview4' 'python-cairo' 'python-gobject' 'python-keyring' 'python-nbxmpp'
          'python-pyasn1' 'python-pyopenssl' 'python-precis_i18n' 'python-css-parser'
          'python-distro' 'hicolor-icon-theme')
 optdepends=('python-dbus: for gajim-remote and zeroconf support'
@@ -34,8 +34,8 @@ optdepends=('python-dbus: for gajim-remote and zeroconf support'
             'gsound: Notification Sounds')
 source=(https://www.gajim.org/downloads/${_pkgver%.*}/gajim-${_pkgver}.tar.gz)
 #source=(https://www.gajim.org/downloads/${_pkgver%.*}/gajim-${_pkgver}-${_fixupver}.tar.gz)
-sha512sums=('9d0f4f9446ad276ebadc6eb38940c14504984ba27b6d14135bfff29c4f5b62a363c473c36615a41cca30cc2c3a4080320b0c9442f21360403297eb28a364b31e')
-b2sums=('304df4c33812ee269e67691627e89c40e77749675b9fd45bda7152c95271058b30eb417e14e0ec402360bf994d5da5d4517d6f2221888fb926c71bb9c0f796d3')
+sha512sums=('3b4746bb0161d071ae4a290994956f5ad19e959cc870bfaf38d29cdc192ab4d5dd19f8c1178fc5c3c487b989cfd62b7356c56863c99301358c89d5630441b5fc')
+b2sums=('cce044f26f02ed5fe00bdaff663dc0a5d092216b3c8e88af3abac7bbf4a2b2a84a12e6200847bc467691d2447818025fabf3557c0a16cd212147d7d581b0edff')
 
 build() {
   cd ${pkgname}-${_pkgver}
