--- a/gajim/PKGBUILD
+++ b/gajim/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Eric Bélanger <eric@archlinux.org>
 
 pkgname=gajim
-_pkgver=1.4.4
+_pkgver=1.4.5
 #_fixupver=2
 pkgver=${_pkgver}
 #pkgver=${_pkgver}.r${_fixupver}
@@ -13,7 +13,7 @@ arch=('any')
 license=('GPL3')
 depends=('gtk3' 'gtksourceview4' 'python-cairo' 'python-gobject' 'python-keyring' 'python-nbxmpp'
          'python-pyasn1' 'python-pyopenssl' 'python-precis_i18n' 'python-css-parser'
-         'python-distro' 'hicolor-icon-theme')
+         'python-distro' 'hicolor-icon-theme' 'python-pillow')
 optdepends=('python-dbus: for gajim-remote and zeroconf support'
             'avahi: serverless chatting with autodetected clients in a local network'
             'farstream: start audio and video chat'
@@ -28,14 +28,13 @@ optdepends=('python-dbus: for gajim-remote and zeroconf support'
             'gupnp-igd: request your router to forward port for file transfer'
             'libxss: measure idle time, in order to set auto status'
             'python-gnupg: encrypting chat messages with OpenPGP'
-            'python-pillow: support of WebP avatars'
             'python-axolotl: OMEMO support'
             'python-qrcode: generate QR codes for OMEMO keys'
             'gsound: Notification Sounds')
 source=(https://www.gajim.org/downloads/${_pkgver%.*}/gajim-${_pkgver}.tar.gz)
 #source=(https://www.gajim.org/downloads/${_pkgver%.*}/gajim-${_pkgver}-${_fixupver}.tar.gz)
-sha512sums=('3b4746bb0161d071ae4a290994956f5ad19e959cc870bfaf38d29cdc192ab4d5dd19f8c1178fc5c3c487b989cfd62b7356c56863c99301358c89d5630441b5fc')
-b2sums=('cce044f26f02ed5fe00bdaff663dc0a5d092216b3c8e88af3abac7bbf4a2b2a84a12e6200847bc467691d2447818025fabf3557c0a16cd212147d7d581b0edff')
+sha512sums=('bce88fc20f0c0571116e9145af222efab67b82184a87f40ddaba5f802cf5034caa1ea0feb89f518332cd5bd6a1e82ec1ca15199966e57aaf50701998c3a5edd8')
+b2sums=('1c49f8eef8284b20beee933fda519729ff2007f8fb988ed900ba47531b7538046f7093aa142810f3b6686323f8b802df23c26b3065e62a980406da77928f7aee')
 
 build() {
   cd ${pkgname}-${_pkgver}
