--- a/gajim/PKGBUILD
+++ b/gajim/PKGBUILD
@@ -6,14 +6,16 @@ _pkgver=1.4.5
 #_fixupver=2
 pkgver=${_pkgver}
 #pkgver=${_pkgver}.r${_fixupver}
-pkgrel=1
+pkgrel=2
 pkgdesc='Full featured and easy to use XMPP (Jabber) client'
 url='https://gajim.org/'
 arch=('any')
 license=('GPL3')
 depends=('gtk3' 'gtksourceview4' 'python-cairo' 'python-gobject' 'python-keyring' 'python-nbxmpp'
          'python-pyasn1' 'python-pyopenssl' 'python-precis_i18n' 'python-css-parser'
-         'python-distro' 'hicolor-icon-theme' 'python-pillow')
+         'python-distro' 'hicolor-icon-theme' 'python-pillow' 'python-gssapi' 'python-netifaces'
+         'python-packaging')
+makedepends=('python-build' 'python-installer' 'python-wheel' 'python-setuptools')
 optdepends=('python-dbus: for gajim-remote and zeroconf support'
             'avahi: serverless chatting with autodetected clients in a local network'
             'farstream: start audio and video chat'
@@ -24,7 +26,6 @@ optdepends=('python-dbus: for gajim-remote and zeroconf support'
             'gst-python: for video/voice support'
             'gspell: for spell checking support'
             'geoclue: share current location'
-            'python-keyring: store passwords encrypted in a keyring'
             'gupnp-igd: request your router to forward port for file transfer'
             'libxss: measure idle time, in order to set auto status'
             'python-gnupg: encrypting chat messages with OpenPGP'
@@ -38,12 +39,12 @@ b2sums=('1c49f8eef8284b20beee933fda519729ff2007f8fb988ed900ba47531b7538046f7093a
 
 build() {
   cd ${pkgname}-${_pkgver}
-  python setup.py build
+  python -m build --wheel --no-isolation
 }
 
 package() {
   cd ${pkgname}-${_pkgver}
-  python setup.py install --root="${pkgdir}" --optimize=1 --skip-build
+  python -m installer --destdir="$pkgdir" dist/*.whl
 }
 
 # vim: ts=2 sw=2 et:
