--- a/lib32-libidn2/PKGBUILD
+++ b/lib32-libidn2/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Daurnimator <quae@daurnimator.com>
 
 pkgname=lib32-libidn2
-pkgver=2.3.2
+pkgver=2.3.3
 pkgrel=1
 pkgdesc='Free software implementation of IDNA2008, Punycode and TR46'
 url='https://www.gnu.org/software/libidn/#libidn2'
@@ -12,10 +12,9 @@ license=('GPL2' 'LGPL3')
 depends=('libidn2' 'lib32-glibc' 'lib32-libunistring')
 makedepends=('gtk-doc' 'ruby-ronn')
 source=(https://ftp.gnu.org/gnu/libidn/libidn2-${pkgver}.tar.gz{,.sig})
-sha256sums=('76940cd4e778e8093579a9d195b25fff5e936e9dc6242068528b437a76764f91'
+sha256sums=('f3ac987522c00d33d44b323cae424e2cffcb4c63c6aa6cd1376edacbf1c36eb0'
             'SKIP')
-validpgpkeys=('9AA9BDB11BB1B99A21285A330664A76954265E8C'  # Simon Josefsson <simon@josefsson.org>
-              '1CB27DBC98614B2D5841646D08302DB6A2670428') # Tim Rühsen <tim.ruehsen@gmx.de>
+validpgpkeys=('B1D2BD1375BECB784CF4F8C4D73CF638C53C06BE') # Simon Josefsson <simon@josefsson.org>
 
 prepare() {
   cd libidn2-${pkgver}
