--- a/aliyun-cli/PKGBUILD
+++ b/aliyun-cli/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Andreas 'Segaja' Schleifer <archlinux at segaja dot de>
 
 pkgname=aliyun-cli
-_gitcommit=624846497c415f00e0a652e0a386c916068f21c6
-pkgver=3.0.121
+_gitcommit=aecf1f73dcb5911cfd6821cb02c601745782bb39
+pkgver=3.0.123
 pkgrel=1
 pkgdesc='Alibaba Cloud CLI'
 arch=('x86_64')
@@ -12,14 +12,11 @@ license=('Apache')
 depends=('glibc')
 makedepends=('git' 'go')
 source=("git+${url}#commit=${_gitcommit}"
-        git+https://github.com/aliyun/aliyun-openapi-meta
-        "fix-unit-tests.patch::$url/commit/2a825289bb45e07bea30f67d8d4031dae0fff6a3.patch")
+        git+https://github.com/aliyun/aliyun-openapi-meta)
 sha512sums=('SKIP'
-            'SKIP'
-            '75a953dbbe351b53ee9276c8309fa71a590c06eaf004f4b18ac198628dd5b928873be6d40d52f547ee23259ad1ff2bf370117545818df7872414ec6d46663729')
+            'SKIP')
 b2sums=('SKIP'
-        'SKIP'
-        'e1684239f8c0450189668fe56d17de8428933d52fca0ac1455628a8a09d310d6622ffee90430c4f66e99f3ac46ea6a40d01468b61a11364bf73c7b76a607d4e1')
+        'SKIP')
 
 pkgver() {
   cd ${pkgname}
@@ -28,7 +25,6 @@ pkgver() {
 
 prepare() {
   cd ${pkgname}
-  patch -Np1 -i ../fix-unit-tests.patch
   git submodule init
   git config submodule."aliyun-openapi-meta".url "${srcdir}/aliyun-openapi-meta"
   git submodule update --init --recursive
