upgpkg: caddy 2.5.2-2 reenable tests

--- a/caddy/PKGBUILD
+++ b/caddy/PKGBUILD
@@ -10,7 +10,7 @@ pkgname=caddy
 pkgver=2.5.2
 _gitcommit=v2.5.2
 _distcommit=093d76bdd6ecacd8aeb21de3aa0c35b82a0eb064
-pkgrel=1
+pkgrel=2
 pkgdesc='Fast web server with automatic HTTPS'
 url='https://caddyserver.com'
 arch=('x86_64')
@@ -70,12 +70,12 @@ build() {
 check() {
   # Disabled for now, because of failing tests
   cd "${pkgname}"
-  # go test ./...
-  # version=$(./cmd/caddy/caddy version)
-  # echo "Caddy version: ${version}"
-  # if [[ $version != v$pkgver ]]; then
-  #   exit 1
-  # fi
+  go test ./...
+  version=$(./cmd/caddy/caddy version)
+  echo "Caddy version: ${version}"
+  if [[ $version != v$pkgver ]]; then
+    exit 1
+  fi
 }
 
 package() {
