upgpkg: haskell-iwlib 0.1.1-1

--- a/haskell-iwlib/PKGBUILD
+++ b/haskell-iwlib/PKGBUILD
@@ -1,16 +1,16 @@
 # Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
 _hkgname=iwlib
 pkgname=haskell-iwlib
-pkgver=0.1.0
-pkgrel=19
+pkgver=0.1.1
+pkgrel=1
 pkgdesc='Binding to the iw library for getting info about the current WiFi connection'
-url='https://hackage.haskell.org/package/iwlib'
+url='https://codeberg.org/jao/iwlib'
 license=('BSD')
 arch=('x86_64')
 depends=('ghc-libs' 'wireless_tools')
 makedepends=('ghc')
-source=(${pkgname}-${pkgver}.tar.gz::https://github.com/jaor/iwlib/archive/${pkgver}.tar.gz)
-sha512sums=('0d1bfd8e716c811d73c9d7802385138edc43193fb7b0c6f1620cf5b2e51c06b30fa537af925a7cdf193d0b247a71a82a574fac0ab6f721799c01a2a0c71f3dbc')
+source=(https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz)
+sha512sums=('ea4da0a4e9ec8a38f0db4060777988c7d1c954c5f3b17919e9ed23d3793f9ff0bdf0535b63dc75c10a29b52e7f06f8661d93f43905f4a45b43cbecc71f559a31')
 
 build() {
   cd ${_hkgname}-${pkgver}
@@ -24,6 +24,7 @@ build() {
     sed -i -r -e "s|ghc-pkg.*update[^ ]* |&'--force' |" register.sh
     sed -i -r -e "s|ghc-pkg.*unregister[^ ]* |&'--force' |" unregister.sh
 }
+
 package() {
   cd ${_hkgname}-${pkgver}
   install -Dm 744 register.sh "${pkgdir}/usr/share/haskell/register/${pkgname}.sh"
