upgpkg: iaito 5.7.0-1: Update to 5.7.0

--- a/iaito/PKGBUILD
+++ b/iaito/PKGBUILD
@@ -3,9 +3,9 @@
 # Contributor: Aaron McDaniel (mcd1992) <'aur' at the domain 'fgthou.se'>
 
 pkgname=iaito
-_gitcommit=24a2eba21c43f42aa4535278be20ff7e957c884d
-pkgver=5.5beta0.r16.g24a2eba2
-pkgrel=2
+_gitcommit=7e7351b673abac2ce824b2b6e8d02ad6d67eac4d
+pkgver=5.7.0
+pkgrel=1
 pkgdesc='Qt and C++ GUI for radare2 reverse engineering framework'
 url='https://github.com/radareorg/iaito'
 arch=('x86_64')
@@ -24,7 +24,7 @@ b2sums=('SKIP'
 
 pkgver() {
   cd iaito
-  git describe --tags | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g' | sed 's/5.5.0.beta/5.5beta0/'
+  git describe --tags | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
