--- a/libupnp/PKGBUILD
+++ b/libupnp/PKGBUILD
@@ -5,8 +5,8 @@
 
 _name=pupnp
 pkgname=libupnp
-pkgver=1.14.12
-pkgrel=3
+pkgver=1.14.13
+pkgrel=1
 pkgdesc='Portable Open Source UPnP Development Kit'
 arch=(x86_64)
 url="https://pupnp.sourceforge.io/"
@@ -15,19 +15,9 @@ depends=(glibc)
 makedepends=(cmake)
 provides=(libixml.so libupnp.so)
 options=(debug)
-source=(
-  $pkgname-$pkgver.tar.gz::https://github.com/$_name/$_name/archive/release-$pkgver.tar.gz
-  $pkgname-1.14.12-optional_static.patch
-)
-sha512sums=('aab17aa12f15d110bfab20cbcbae5f54926b6ca7a30bce10b9287cd39919a06a5e9f1493405e1d561c0d58ba46926f87009df891e4e4f37097df1c3c67635ca9'
-            '7bae244c522f35261fdc07f0036a56eb319d6bff5a88d690e7563369184f7f39c30330e0d88967a84db8c22a1e9d1335dbc66d8758855fd8f9981c4f9ca28ddc')
-b2sums=('721c10f9fa4ffc60743b4ebf8be566ea595931cb1f2a2448d8e3cecfc787abfb855cb16256eaaa10ce6a901cd5e5b3d14672610841b2a718d5dd003ccfd3c2f0'
-        'ef0d9e17d45fe378ef9f7b07c1b679ee4dbe6d9f1aee540123d08c709b092a4824218a863e0a3077e728c17131ae6d817295e44b4fc0cbbc75d372e62c7319f3')
-
-prepare() {
-  # Make static libraries optional, partial backport of https://github.com/pupnp/pupnp/commit/a0622cb0199be1b5f86317fb3c9b4de59d3ac893
-  patch -d $_name-release-$pkgver -p1 -i ../$pkgname-1.14.12-optional_static.patch
-}
+source=($pkgname-$pkgver.tar.gz::https://github.com/$_name/$_name/archive/release-$pkgver.tar.gz)
+sha512sums=('ae6ae72a5e784a0f9508af94c4070627e791660fa37966e9825643fd0f88b171826bda9a2ec872d4961bf3454e5a9cd716127f0bdf6e63c789c4e22aab0b7e71')
+b2sums=('af3cd6c852297d7b131b2deefba8a72427e225c765017edb5f927b81bd1ce2b72d43caf2c46bd383b83536ba858d52dc8d051e272dacc8bd3c952e43443650a4')
 
 build() {
   cmake -DCMAKE_INSTALL_PREFIX=/usr \
