upgpkg: gef 2022.06-2: adding README.md

--- a/gef/PKGBUILD
+++ b/gef/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=gef
 pkgver=2022.06
-pkgrel=1
+pkgrel=2
 pkgdesc='Multi-Architecture GDB Enhanced Features for Exploiters & Reverse-Engineers'
 url='https://github.com/hugsy/gef'
 arch=('any')
@@ -28,6 +28,7 @@ package() {
   cd ${pkgname}-${pkgver}
   install -Dm 644 *.py -t "${pkgdir}/usr/share/${pkgname}"
   install -Dm 644 __pycache__/* -t "${pkgdir}/usr/share/${pkgname}/__pycache__"
+  install -Dm 644 README.md -t "${pkgdir}/usr/share/doc/${pkgname}"
   install -Dm 644 LICENSE -t "${pkgdir}/usr/share/licenses/${pkgname}"
   install -d "${pkgdir}/usr/share/doc/${pkgname}"
   cp -r docs/* "${pkgdir}/usr/share/doc/${pkgname}"
