upgpkg: python-pyvex 9.2.14-2: fix maintainer

--- a/python-pyvex/PKGBUILD
+++ b/python-pyvex/PKGBUILD
@@ -1,9 +1,9 @@
-# Maintainer: ArchStrike <team@archstrike.org>
+# Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
 
 _pyname=pyvex
 pkgname=python-${_pyname}
 pkgver=9.2.14
-pkgrel=1
+pkgrel=2
 pkgdesc="Python bindings for Valgrind's VEX IR"
 url='https://github.com/angr/pyvex'
 license=('BSD')
