upgpkg: python-nampa 1.0-2: drop git makedepends

--- a/python-nampa/PKGBUILD
+++ b/python-nampa/PKGBUILD
@@ -3,13 +3,13 @@
 _pyname=nampa
 pkgname=python-${_pyname}
 pkgver=1.0
-pkgrel=1
+pkgrel=2
 pkgdesc='FLIRT signatures for python'
 url='https://github.com/thebabush/nampa'
 license=('LGPL3')
 arch=('any')
 depends=('python' 'python-future')
-makedepends=('git' 'python-build' 'python-installer' 'python-wheel' 'python-setuptools')
+makedepends=('python-build' 'python-installer' 'python-wheel' 'python-setuptools')
 checkdepends=('python-pytest')
 source=("${url}/archive/${pkgver}/${pkgname}-${pkgver}.tar.gz")
 sha512sums=('899ee2786b0d1739f5d9836310e13c7fdc46df14259491acc480db69f291d6c9934d059064a54798fecab84a9e4a731ada71105dee67b967e93d3cb4435a3387')
