upgpkg: ruby-yard 0.9.28-2: fix ruby-webrick dependency

--- a/ruby-yard/PKGBUILD
+++ b/ruby-yard/PKGBUILD
@@ -4,12 +4,12 @@
 _gemname=yard
 pkgname=ruby-${_gemname}
 pkgver=0.9.28
-pkgrel=1
+pkgrel=2
 pkgdesc='YARD is a Ruby Documentation tool. The Y stands for "Yay!"'
 url='https://yardoc.org/'
 arch=('any')
 license=('MIT')
-depends=('ruby' 'ruby-rdoc')
+depends=('ruby' 'ruby-rdoc' 'ruby-webrick')
 makedepends=('ruby-rake' 'ruby-samus')
 options=('!emptydirs')
 source=(https://github.com/lsegal/yard/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz)
@@ -27,11 +27,23 @@ build() {
   rake gem
 }
 
+check() {
+  cd ${_gemname}-${pkgver}
+  rake spec
+}
+
 package() {
   cd ${_gemname}-${pkgver}
   local _gemdir="$(gem env gemdir)"
-  gem install --ignore-dependencies --no-user-install -i "${pkgdir}${_gemdir}" \
-    -n "${pkgdir}/usr/bin" ${_gemname}-${pkgver}.gem
+  gem install \
+    --local \
+    --verbose \
+    --ignore-dependencies \
+    --no-user-install \
+    --install-dir "${pkgdir}/${_gemdir}" \
+    --bindir "${pkgdir}/usr/bin" \
+    ${_gemname}-${pkgver}.gem
+
   install -Dm 644 README.md CHANGELOG.md -t "${pkgdir}/usr/share/doc/${pkgname}"
   cp -a docs/* "${pkgdir}/usr/share/doc/${pkgname}"
   install -Dm 644 LICENSE -t "${pkgdir}/usr/share/licenses/${pkgname}"
