--- a/irssi/PKGBUILD
+++ b/irssi/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=irssi
 pkgver=1.4.2
-pkgrel=1
+pkgrel=2
 pkgdesc='Modular text mode IRC client with Perl scripting'
 url='https://irssi.org/'
 arch=('x86_64')
@@ -25,7 +25,8 @@ build() {
     -Dwith-perl-lib=vendor \
     -Dwith-proxy=yes \
     -Dwith-otr=yes \
-    -Dwith-perl=yes
+    -Dwith-perl=yes \
+    -Denable-true-color=yes
   ninja -C Build
 }
 
