https://gitlab.archlinux.org/archlinux/devtools/-/merge_requests/109#note_74475

--- a/usbctl/PKGBUILD
+++ b/usbctl/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc='Linux-hardened deny_new_usb control'
 url='https://github.com/anthraxx/usbctl'
 arch=('any')
 license=('MIT')
-depends=('linux-hardened' 'bash' 'usbutils' 'coreutils' 'diffutils' 'procps-ng' 'grep' 'util-linux')
+depends=('linux-hardened' 'bash' 'usbutils' 'coreutils' 'diffutils' 'procps-ng' 'grep' 'util-linux' 'ncurses')
 checkdepends=('shellcheck')
 optdepends=('sudo: elevate to root when needed')
 source=(${url}/archive/${pkgver}/${pkgname}-${pkgver}.tar.gz
