--- a/libbpf/PKGBUILD
+++ b/libbpf/PKGBUILD
@@ -11,6 +11,7 @@ license=('LGPL2.1')
 depends=('glibc' 'libelf' 'linux-api-headers')
 makedepends=('rsync')
 provides=('libbpf.so')
+options=('debug')
 source=(https://github.com/libbpf/libbpf/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz)
 sha512sums=('e3bb602f55215a4f030e564af7321ba6338937c426fcaee478b607f88b0c773c40a0c3f59a2b345bda951a19e79061733f8a3fdc10a6292e92782e65754b584a')
 b2sums=('084be7d4258500fa894560ed2e52821addcc5d150dcd77fd646271b614d788b7931271be9c3e46fdbc4ed93d053ea3e09023158a8e4a31f9452d10dcb0677b58')
