--- a/ctags/PKGBUILD
+++ b/ctags/PKGBUILD
@@ -3,15 +3,16 @@
 # Contributor: John Proctor <jproctor@prium.net>
 
 pkgname=ctags
-_commit=ca81123303640582358ce7b8a4e466615950a1f7  # p5.9.20210905.0
-pkgver=5.9.20210905.0
+_commit=dfffd3d8e18183e0e9131f2c301e18f78866ceb5
+pkgver=5.9.20220828.0
 pkgrel=1
 epoch=1
 pkgdesc='Generates an index file of language objects found in source files'
 url='https://ctags.io/'
 arch=('x86_64')
 license=('GPL')
-depends=('glibc' 'libxml2' 'jansson' 'libyaml' 'libseccomp' 'libseccomp.so')
+depends=('glibc' 'libxml2' 'jansson' 'libyaml' 'libseccomp' 'libseccomp.so'
+         'pcre2')
 makedepends=('git' 'python-docutils')
 provides=('universal-ctags')
 source=("git+https://github.com/universal-ctags/ctags.git#commit=$_commit")
